# duckdb_udf

./: .gitignore  README.md  build_extension.sh  rapidhash_simple.cpp  rapidhash_simple_extension.cpp  test_extension.cpp  test_rapidhash.sh
.github/workflows/: build.yml
rapidhash_ext/: CMakeLists.txt  rapidhash_demo.cpp  rapidhash_functions.cpp
rapidhash_ext/include/: rapidhash_functions.h
rapidhash_extension/: CMakeLists.txt  rapidhash_extension.cpp
